Fixing banner image scaling on mobile for post page

--- a/src/public/css/stylesheet.scss
+++ b/src/public/css/stylesheet.scss
@@ -61,10 +61,10 @@ img {
     }
 }
 
+/* For posts page (feed) */
 .post-container-content-feed {
     padding: 10px 25px;
 }
-/* For posts page */
 .post-container-feed {
     margin: 20px 0;
     a {
@@ -80,21 +80,6 @@ img {
     }
     transition: box-shadow 0.4s ease-in-out;
     border-radius: 10px;
-}
-@media only screen and (max-width: 768px) {
-    .post-container-feed {
-        margin: 10px 0px;
-
-        img {
-            transform: scale(1.8);
-        }
-    }
-
-    .post-container-feed:hover {
-        img {
-            transform: scale(2.2) !important;
-        }
-    }
 }
 
 .post-container-feed:hover {
@@ -115,6 +100,28 @@ img {
     cursor: pointer;
     box-shadow: 2px 2px 10px #888888;
     transition: box-shadow 0.4s ease-in-out;
+}
+
+@media only screen and (max-width: 768px) {
+    .post-container-feed {
+        margin: 10px 0px;
+
+        img {
+            transform: scale(1.8);
+        }
+    }
+
+    .post-container-feed:hover {
+        img {
+            transform: scale(2.2) !important;
+        }
+    }
+
+    .banner-image-container {
+        img {
+            transform: scale(1.8);
+        }
+    }
 }
 
 .form-control {
